[package]
name = "DiscordRolesBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "http", "model", "utils", "rustls_backend"]
version = "0.11.2"
